working well without colors

--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
 <link rel="stylesheet" href="index.css"/>
     </head>
     <body>
-        <input type="number" id="matrix_size" value = "8"/>
-        <matrix></matrix><button id="button_rotor">ROTOR</button>
+        <input type="number" id="matrix_size" value='10'/>
+        <div>
+        <matrix><button id="button_rotor">ROTOR</button></matrix>
+    </div>
 <script src="index.js"></script>
     </body>
 </html>
