по просто решение 38 реда манипулация на само един масив

--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
 <link rel="stylesheet" href="index.css"/>
     </head>
     <body>
-        <input type="number" id="matrix_size" value='10'/>
+        
+            <input type="number" id="matrix_size" value=' '/>
+        
         <div>
         <matrix><button id="button_rotor">ROTOR</button></matrix>
     </div>
