--- a/index.html
+++ b/index.html
@@ -5,10 +5,13 @@
 <link rel="stylesheet" href="index.css"/>
     </head>
     <body>
-        <input type="number" id="matrix_size" value='10'/>
+        <input type="number" id="matrix_size" value='5'/>
         <div>
-        <matrix><button id="button_rotor">ROTOR</button></matrix>
+     
     </div>
+    <div><table></table>   <button id="button_rotor">ROTOR</button></div>
 <script src="index.js"></script>
+ 
+    
     </body>
 </html>
